--- a/META.yml
+++ b/META.yml
@@ -1,27 +1,28 @@
 ---
 name: TAP-Formatter-JUnit
-version: 0.02
+version: 0.03
 author:
   - Graham TerMarsch (cpan@howlingfrog.com)
 abstract: Harness output delegate for JUnit output
 license: perl
 resources:
-  license: http://dev.perl.org/licenses/
+  license: ~
 requires:
   Class::Field: 0
   File::Slurp: 0
   TAP::Harness: 3.12
   XML::Generator: 0
 build_requires:
+  IO::Scalar: 0
   Test::Differences: 0
   Test::More: 0
 provides:
   TAP::Formatter::JUnit:
     file: lib/TAP/Formatter/JUnit.pm
-    version: 0.02
+    version: 0.03
   TAP::Formatter::JUnit::Session:
     file: lib/TAP/Formatter/JUnit/Session.pm
-generated_by: Module::Build version 0.280801
+generated_by: Module::Build version 0.32
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
