--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ license: perl
 resources:
   license: ~
 requires:
-  Class::Field: 0
+  Moose: 0
   File::Slurp: 0
   TAP::Harness: 3.12
   XML::Generator: 0
